--- a/.gitignore
+++ b/.gitignore
@@ -195,4 +195,5 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 
 sessions
-db/config.py
+db
+!db/wrapper.py
